--- a/templates/registration.html
+++ b/templates/registration.html
@@ -16,37 +16,10 @@
     <div class="row justify-content-center align-items-center">
         <div class="text-center col-10 col-md-8 col-lg-6">
 
-            <h1 class="md-5">Register the Ear</h1>
-            Ear Based Authentication system <br>
-            (Army Institute of Technology)
+            <h1 class="md-5">Find Feature Vectors</h1>
+            Ear Biometric System (Army Institute of Technology)
             <form action="" method="post" enctype="multipart/form-data">
-                <!-- {% if not profile_url %}
-                    <div class="mt-5">
-                        <img src="../static/profile.jpg" class="img-thumbnail" style="height: 200px; width:200px;">
-                    </div>
-                {% endif %}
-                {% if profile_url %}
-                    <div class="mt-5">
-                        <img src="{{ file_url }}" class="img-thumbnail" style="height: 200px; width:200px;">
-                    </div>
-                {% endif %}
-                Profile Picture
-
-                {% if not ear_url %}
-                    <div class="mt-5">
-                        <img src="../static/ear.jpg" class="img-thumbnail" style="height: 200px; width:200px;">
-                    </div>
-                {% endif %}
-                {% if ear_url %}
-                    <div class="mt-5">
-                        <img src="{{ file_url }}" class="img-thumbnail" style="height: 200px; width:200px;">
-                    </div>
-                {% endif %}
-                Ear Picture
-                <br>
-                <br> -->
-
-
+                
                 {{form.hidden_tag()}}
                 {% for ele in form %}
                 {% for error in ele.errors %}
@@ -54,48 +27,52 @@
                     <br>
                 {% endfor %}
                 {% endfor %}
+                
+                {% if not ear_url %}
+                    <div class="mt-5">
+                        <img src="../static/ear.jpg" class="img-thumbnail" style="height: 200px; width:200px;">
+                    </div>
+                {% endif %}
+                {% if ear_url %}
+                    <div class="mt-5">
+                        <img src="{{ ear_url }}" class="img-thumbnail" style="height: 200px; width:200px;">
+                    </div>
+                {% endif %}
+                Ear Picture
 
-                <!-- {% for error in form.earphoto.errors %}
-                    <span style="color: red;">{{error}}</span>
-                {% endfor %} -->
                 
-                
-                <br>
-                <div class="row">
-                    Profile Image <i style="color: red; width:auto; padding:0%;">*</i> : {{form.photo(class="form-control")}}
-                </div>
                 <br>
                 <div class="row">
                     Ear Image<i style="color: red; width:auto; padding:0%;">*</i>: {{form.earphoto(class="form-control")}}
                 </div>
                 <br>
-                <div class="row">
-                    Name<i style="color: red; width:auto; padding:0%;">*</i>: {{form.name(class="form-control")}}
-                </div>
-                <br>
-                <div class="row">
-                    Father's name<i style="color: red; width:auto; padding:0%;">*</i>: {{form.fathername(class="form-control")}}
-                </div>
-                <br>
-                <div class="row">
-                    Registration Number<i style="color: red; width:auto; padding:0%;">*</i>: {{form.regno(class="form-control")}}
-                </div>
-                <br>
-                <div class="row">
-                    Date of Birth<i style="color: red; width:auto; padding:0%;">*</i>: {{form.dob(class="form-control")}}
-                </div>
-                <br>
-                <div class="row">
-                    Blood Group<i style="color: red; width:auto; padding:0%;">*</i>: {{form.bloodgroup(class="form-control")}}
-                </div>
-                <br>
-                
+
                 <div class="row">{{form.submit(class="btn btn-success")}}</div>
             </form>
-            
-            
+            <br>
+
         </div>
-        
+        {% if ear %}
+        <div class="card text-black bg-light" style="width:100%;">
+            <div class="card-header"><h6><b>Output</b></h6></div>
+            <div class="card-body">
+              <p class="card-text">
+                <br>
+                <b>Feature Vector 1: (angle between reference_Line_1 joining reference point and normal intersection point on the outer edge)</b>
+                <br>
+                {{ear['fv'][0]}}
+                <br>
+                <br>
+                <b>Feature Vector 2: (angle between reference_line_2 joining reference point and normal intersection point on the outer edge)</b>
+                <br>
+                {{ear['fv'][1]}}
+                <br>
+                <br>
+                <b>Ear Category:</b>{{ear['shape']+1}}
+              </p>
+            </div>
+        </div>
+        {% endif %}
     </div>
 </div>
 
